feat: add userSettings collection
