# src/app.js
@@ -19,7 +19,7 @@ const userTokenRouter = require('./resources/token/token.router');
 const userWordsRouter = require('./resources/userWords/userWord.router');
 const aggregatedWordsRouter = require('./resources/aggregatedWords/aggregatedWord.router');
 const statisticRouter = require('./resources/statistics/statistic.router');
-const settingRouter = require('./resources/settings/setting.router');
+const userSettingsRouter = require('./resources/userSettings/userSettings.router');
 const errorHandler = require('./errors/errorHandler');
 const checkAuthentication = require('./resources/authentication/checkAuthentication');
 const { userIdValidator } = require('./utils/validation/validator');
@@ -70,7 +70,7 @@ userRouter.use('/:id/aggregatedWords', userIdValidator, aggregatedWordsRouter);
 
 userRouter.use('/:id/statistics', userIdValidator, statisticRouter);
 
-userRouter.use('/:id/settings', userIdValidator, settingRouter);
+userRouter.use('/:id/settings', userIdValidator, userSettingsRouter);
 
 app.use((req, res, next) => next(createError(NOT_FOUND)));
 
